--- a/rapido-clone/netlify.toml
+++ b/rapido-clone/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "rapido-clone"
   command = "npm run build"
-  publish = "build"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
